2006-04-24  Les Harris  <hl.harris@comcast.net>
	* src/gnome-mud.c, src/modules.c, src/mud-preferences.window.c,
	ui/directions.glade, ui/main.glade, ui/prefs.glade,
	configure.ac: Removed all traces of libgnome and libgnomeui
	from gmud; converted functionality to gtk+ equivalents.

	* src/modules-api.c: Added a typecast to stop a warning on compile.
	* src/modules.c, src/modules-structures.h,
	src/mud-window.c: Fix "enabeled" typo.

2006-04-23  Mart Raudsepp  <leio@dustbite.net>

	* src/gnome-mud.c, src/modules.c, src/modules_api.c,
	src/mud-connection-view.c, src/mud-preferences-window.c,
	src/mud-profile.c, src/mud-tray.c, src/mud-window.c: Remove all
	"rcsid" variables from the source.

2006-04-23  Jordi Mallach  <jordi@sindominio.net>

	* src/mud-log.c: Fix gi18n.h include and unify log format.

2006-04-22  Les Harris  <hl.harris@comcast.net>

	* ui/main.glade: Added save dialog, set Start/Stop Logging and Save
	Buffer menu items to not sensitive on startup.

	* src/gnome-mud.c: Now adds various folders into its directory if they
	do not exist (plugins, logs).  

	* src/mud-connection-view.[ch]: Added in support for the MudLog
	object.	Also added in two accessor functions to facilitate logging
	and buffer dumping.

	* src/mud-window.c: Made the various logging menu items activate and
	dim according to wether or not they are relevant. Added callbacks for
	the logging menuitems.

	* src/mud-log.[ch]: New files which implement the MudLog object.

2006-04-09  Paul Esson  <paul.esson@gmail.com>

	* src/mud-tray.c: Bugfix, fixes problem with two text boxes 
	appearing simultaneously.

	* ui/main.glade:  Adds Connect, Disconnect & Reconnect buttons.
	Changes menu icons for Connect & Reconnect to gtk-standard icons.
	
	* src/mud-window.c (mud_window_inputtoggle_cb, 
	mud_window_size_request, mud_window_init): Stops use of gtkpaned
	replaced with vbox in glade edit.

	* src/mud-window.[ch] (mud_window_init): Added callback for 
	buttons from glade edit.
